--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:versionCode="1009003" android:versionName="1.9.3.20150215-1153" package="us.nineworlds.serenity">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:versionCode="1009004" android:versionName="1.9.4.20150220-1911" package="us.nineworlds.serenity">
 
     <!-- try to exclude phone devices from the list. Currently only support Tablets and TVs -->
     <supports-screens android:largeScreens="true" android:normalScreens="false" android:smallScreens="false" android:xlargeScreens="true"/>
@@ -16,6 +16,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
+    <uses-feature android:name="android.hardware.microphone" android:required="false"/>
 
     <application android:allowBackup="true" android:hardwareAccelerated="true" android:icon="@drawable/serenity_bonsai_logo" android:label="@string/app_name" android:largeHeap="true" android:name="us.nineworlds.serenity.SerenityApplication" android:theme="@style/AppTheme">
         <meta-data android:name="android.app.default_searchable" android:value="us.nineworlds.serenity.ui.search.SearchableActivity"/>
