--- a/serenity-app/src/main/AndroidManifest.xml
+++ b/serenity-app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <!-- try to exclude phone devices from the list. Currently only support Tablets and TVs -->
     <supports-screens android:largeScreens="true" android:normalScreens="false" android:smallScreens="false" android:xlargeScreens="true"/>
 
-    <uses-sdk android:minSdkVersion="13" android:targetSdkVersion="19"/>
+    <uses-sdk android:minSdkVersion="13" android:targetSdkVersion="22"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -16,7 +16,13 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
+    <uses-feature android:name="android.hardware.faketouch" android:required="false"/>
+    <uses-feature android:name="android.hardware.telephony" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
+    <uses-feature android:name="android.hardware.nfc" android:required="false"/>
+    <uses-feature android:name="android.hardware.location.gps" android:required="false"/>
     <uses-feature android:name="android.hardware.microphone" android:required="false"/>
+    <uses-feature android:name="android.hardware.sensor" android:required="false"/>
 
     <application android:allowBackup="true" android:hardwareAccelerated="true" android:icon="@drawable/serenity_bonsai_logo" android:label="@string/app_name" android:largeHeap="true" android:name="us.nineworlds.serenity.SerenityApplication" android:theme="@style/AppTheme">
         <meta-data android:name="android.app.default_searchable" android:value="us.nineworlds.serenity.ui.search.SearchableActivity"/>
