--- a/plexapp-rest-library/pom.xml
+++ b/plexapp-rest-library/pom.xml
@@ -5,7 +5,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
    <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>serenity-parent</artifactId>
-      <version>1.9.4</version>
+      <version>1.9.5-SNAPSHOT</version>
    </parent>
 
    <artifactId>plexapp-rest-library</artifactId>
