--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -28,13 +28,14 @@
 		</dependency>
 		<dependency>
 			<groupId>com.google.android.gms</groupId>
-			<artifactId>google-play-services</artifactId>
-			<version>19.0.0</version>
+			<artifactId>play-services-analytics-impl</artifactId>
+			<version>10.0.1</version>
+			<type>aar</type>
 		</dependency>
 		<dependency>
 			<groupId>com.google.android</groupId>
-			<artifactId>youtube-android-player-api</artifactId>
-			<version>1.0.0</version>
+			<artifactId>youtube-player-api</artifactId>
+			<version>1.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.android.support</groupId>
