--- a/serenity-app/src/main/AndroidManifest.xml
+++ b/serenity-app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <!-- try to exclude phone devices from the list. Currently only support Tablets and TVs -->
     <supports-screens android:largeScreens="true" android:normalScreens="false" android:smallScreens="false" android:xlargeScreens="true"/>
 
-    <uses-sdk android:minSdkVersion="13" android:targetSdkVersion="22"/>
+    <uses-sdk android:minSdkVersion="17" android:targetSdkVersion="25" tools:overrideLibrary="android.support.v17.leanback"/>
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
