--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -1,11 +1,19 @@
 buildscript {
-
+  repositories {
+    jcenter()
+    mavenCentral()
+  }
   dependencies {
     classpath 'com.android.tools.build:gradle:2.2.3'
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.5.0'
   }
 
+}
+
+repositories {
+  jcenter()
+  mavenCentral()
 }
 
 apply plugin: 'com.android.application'
