--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -83,6 +83,8 @@ junitJacoco {
 dependencies {
 
   compile 'org.apache.commons:commons-lang3:3.3.2'
+  compile 'org.greenrobot:eventbus:3.0.0'
+  compile 'com.birbit:android-priority-jobqueue:2.0.1'
   compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
   compile 'com.google.android.gms:play-services-analytics-impl:10.2.1'
   compile 'com.google.android:youtube-player-api:1.2.2'
