--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ android:
     - platform-tools
     - build-tools-25.0.2
     - android-25
+    - extra-android-m2repository
+    - extra-google-m2repository
+    - extra-android-support
+    - extra-google-google_play_services
+jdk:
+   - oraclejdk8
 
 script:
    - ./gradlew jacocoReportDebug
