--- a/plexapp-rest-library/build.gradle
+++ b/plexapp-rest-library/build.gradle
@@ -3,6 +3,14 @@ apply plugin: 'java'
 targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
 
+repositories {
+  jcenter()
+  mavenCentral()
+  maven {
+     url "http://kingargyle.github.io/repo"
+  }
+}
+
 dependencies {
 
   compile 'com.squareup.retrofit2:retrofit:2.2.0'
