Fix compilation issues

--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -11,6 +11,9 @@ buildscript {
 
 }
 
+evaluationDependsOn(':plexapp-rest-library')
+evaluationDependsOn(':subtitle-converter')
+
 repositories {
   jcenter()
   mavenCentral()
