--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,5 @@ jdk:
    - oraclejdk8
 
 script:
-   - ./gradlew plexapp-rest-library:build
-   - ./gradlew subtitle-converter:build
-   - ./gradlew jacocoTestReportDebug
+   - ./gradlew clean assembleDebug
    
