--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,4 @@
-include 'subtitle-converter', 'plexapp-rest-library', 'serenity-app'
+include ':serenity-app'
+include ':subtitle-converter'
+include ':plexapp-rest-library'
+
