--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -92,6 +92,9 @@ junitJacoco {
 
 dependencies {
 
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: '1.5.0'
+
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.birbit:android-priority-jobqueue:2.0.1'
