--- a/plexapp-rest-library/build.gradle
+++ b/plexapp-rest-library/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
 
+  compile project(':serenity-common')
   compile 'com.squareup.retrofit2:retrofit:2.3.0'
   compile 'com.squareup.okhttp3:okhttp:3.8.1'
   compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
