--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':serenity-app'
+include ':serenity-app', ':emby-lib', ':serenity-common'
 include ':subtitle-converter'
 include ':plexapp-rest-library'
 
