--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -92,6 +92,9 @@ junitJacoco {
 
 dependencies {
 
+    compile 'com.arello-mobile:moxy:1.5.3'
+    apt 'com.arello-mobile:moxy-compiler:1.5.3'
+    compile 'com.arello-mobile:moxy-app-compat:1.5.3'
 
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: '1.5.0'
