Use correct task

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ jdk:
    - oraclejdk8
 
 script:
-   - ./gradlew clean :serenity-app:jacocoTestDebug
+   - ./gradlew clean :serenity-app:jacocoTestReportDebug
    
