--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
+
     repositories {
         jcenter()
         mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.3-2'
         classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.5.0'
     }
 
@@ -23,7 +24,8 @@ repositories {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'com.vanniktech.android.junit.jacoco'
 
 android {
@@ -33,6 +35,10 @@ android {
 
         minSdkVersion 17
         targetSdkVersion 25
+    }
+
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
     }
 
 
@@ -92,8 +98,9 @@ junitJacoco {
 
 dependencies {
 
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.3-2"
     compile 'com.arello-mobile:moxy:1.5.3'
-    apt 'com.arello-mobile:moxy-compiler:1.5.3'
+    kapt 'com.arello-mobile:moxy-compiler:1.5.3'
     compile 'com.arello-mobile:moxy-app-compat:1.5.3'
 
     compile 'com.github.bumptech.glide:glide:3.8.0'
@@ -116,10 +123,10 @@ dependencies {
     }
     compile 'com.squareup.okhttp3:okhttp-urlconnection:3.6.0'
     compile 'com.squareup.dagger:dagger:1.2.2'
-    apt 'com.squareup.dagger:dagger-compiler:1.2.2'
+    kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
     compile 'com.github.vganin:dpadaware-recyclerview:1.0.1'
     compile 'com.jakewharton:butterknife:8.4.0'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    kapt 'com.jakewharton:butterknife-compiler:8.4.0'
 
     testCompile 'junit:junit:4.11'
     testCompile('org.robolectric:robolectric:3.3.2') {
@@ -137,7 +144,7 @@ dependencies {
     testCompile 'org.mockito:mockito-all:1.9.5'
     testCompile 'com.squareup.okhttp3:mockwebserver:3.8.1'
     testCompile 'commons-io:commons-io:2.4'
-    testApt 'com.squareup.dagger:dagger-compiler:1.2.2'
+    kaptTest 'com.squareup.dagger:dagger-compiler:1.2.2'
 }
 
 /*
