--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -94,6 +94,10 @@ android {
 
 junitJacoco {
     jacocoVersion = '0.7.2.201409121644' // type String
+    excludes = [ "**/*_ViewBinding.class", "**/*InjectAdapter.class", "android/support/**/*.class",
+                 "com/google/**/*.class", "com/birbit/**/*.class", "butterknife/**/*.class",
+                 "com/arellomobile/**/*.class", "net/ganin/darv/**/*.class", "**/*ViewStateProvider.class",
+                 "**/*PresentersBinder.class"]
 }
 
 dependencies {
