Upload code coverage reports to codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,5 @@ jdk:
 script:
    - ./gradlew clean assembleDebug
    
+after_success:
+  bash <(curl -s https://codecov.io/bash) -t 24a7fae8-56e1-4047-9939-29205fbbfa42
