Start conversion of Data classes to Kotlin
Add additional unit tests.  Made sure existing
functionality still worked after converting a couple
of classes to contlin.

--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -97,7 +97,8 @@ junitJacoco {
     excludes = [ "**/*_ViewBinding.class", "**/*InjectAdapter.class", "android/support/**/*.class",
                  "com/google/**/*.class", "com/birbit/**/*.class", "butterknife/**/*.class",
                  "com/arellomobile/**/*.class", "net/ganin/darv/**/*.class", "**/*ViewStateProvider.class",
-                 "**/*PresentersBinder.class"]
+                 "**/*PresentersBinder.class",
+                 "us/nineworlds/serenity/R.*.class"]
 }
 
 dependencies {
